--- a/index.html
+++ b/index.html
@@ -2,47 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Me | Abimbola</title>
+    <title>About Me | Abimbola Arowojolu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav>
-        <h2>Abimbola</h2>
+        <h2>Abimbola Arowojolu</h2>
     </nav>
 
     <section class="hero">
         <h1>Hello, I'm Abimbola 👋</h1>
-        <p>A student passionate about technology and growth.</p>
+        <p>A student with passion for learning, growth, and technology.</p>
     </section>
 
     <section class="about">
         <h2>About Me</h2>
         <p>
-            My name is Abimbola Arowojolu. I am a student who is interested in
-            learning new technologies and improving myself every day.
-            I enjoy building simple web pages and exploring how technology
-            solves real-life problems.
+            My name is Abimbola Arowojolu. I am a student who is deeply interested
+            in technology and personal development. I enjoy learning new things
+            and improving myself both academically and personally.
+        </p>
+        <p>
+            I believe that consistency, discipline, and curiosity are important
+            values in life. I am always open to learning from others and working
+            collaboratively to achieve shared goals.
+        </p>
+    </section>
+
+    <section class="education">
+        <h2>Education</h2>
+        <p>
+            I am currently an undergraduate student. Through my academic journey,
+            I have been exposed to problem-solving, teamwork, and basic technical
+            skills that are important in today’s world.
         </p>
     </section>
 
     <section class="skills">
         <h2>Skills & Interests</h2>
         <ul>
-            <li>HTML & CSS</li>
+            <li>HTML & CSS (Beginner)</li>
             <li>Problem Solving</li>
-            <li>Learning New Skills</li>
-            <li>Team Collaboration</li>
+            <li>Teamwork and Collaboration</li>
+            <li>Learning New Technologies</li>
+            <li>Time Management</li>
         </ul>
+    </section>
+
+    <section class="goals">
+        <h2>My Goals</h2>
+        <p>
+            My goal is to continue developing my skills in technology and to use
+            them to create solutions that are useful and impactful. I am focused
+            on steady improvement and building a strong foundation for the future.
+        </p>
     </section>
 
     <section class="contact">
         <h2>Contact</h2>
-        <p>Email: example@email.com</p>
+        <p>
+            Email: <strong>example@email.com</strong>
+        </p>
+        <p>
+            GitHub: <strong>https://bimbo-coder.github.io</strong>
+        </p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Abimbola Arowojolu</p>
+        <p>&copy; 2025 Abimbola Arowojolu. All rights reserved.</p>
     </footer>
 
 </body>
