--- a/index.html
+++ b/index.html
@@ -9,66 +9,59 @@
 
     <nav>
         <h2>Abimbola Arowojolu</h2>
+        <button onclick="toggleMode()">🌙 Toggle Mode</button>
     </nav>
 
     <section class="hero">
-        <h1>Hello, I'm Abimbola 👋</h1>
-        <p>A student with passion for learning, growth, and technology.</p>
+        <h1 id="greeting">Hello, I'm Abimbola 👋</h1>
+        <p>A student passionate about learning and technology.</p>
+        <button onclick="changeGreeting()">Click Me</button>
     </section>
 
     <section class="about">
         <h2>About Me</h2>
         <p>
-            My name is Abimbola Arowojolu. I am a student who is deeply interested
-            in technology and personal development. I enjoy learning new things
-            and improving myself both academically and personally.
-        </p>
-        <p>
-            I believe that consistency, discipline, and curiosity are important
-            values in life. I am always open to learning from others and working
-            collaboratively to achieve shared goals.
+            My name is Abimbola Arowojolu. I am a student who enjoys learning new
+            skills and exploring how technology can be used to solve problems.
         </p>
     </section>
 
     <section class="education">
         <h2>Education</h2>
         <p>
-            I am currently an undergraduate student. Through my academic journey,
-            I have been exposed to problem-solving, teamwork, and basic technical
-            skills that are important in today’s world.
+            I am currently an undergraduate student, building a foundation in
+            technology, teamwork, and problem-solving.
         </p>
     </section>
 
     <section class="skills">
         <h2>Skills & Interests</h2>
         <ul>
-            <li>HTML & CSS (Beginner)</li>
+            <li>HTML, CSS & JavaScript (Beginner)</li>
             <li>Problem Solving</li>
-            <li>Teamwork and Collaboration</li>
-            <li>Learning New Technologies</li>
-            <li>Time Management</li>
+            <li>Team Collaboration</li>
+            <li>Continuous Learning</li>
         </ul>
     </section>
 
     <section class="goals">
         <h2>My Goals</h2>
         <p>
-            My goal is to continue developing my skills in technology and to use
-            them to create solutions that are useful and impactful. I am focused
-            on steady improvement and building a strong foundation for the future.
+            My goal is to grow steadily in technology and use my skills to build
+            useful and meaningful solutions.
         </p>
     </section>
 
     <section class="contact">
         <h2>Contact</h2>
-        <p>
-            Email: <strong>example@email.com</strong>
-        </p>
+        <p>Email: <strong>example@email.com</strong></p>
+        <p>GitHub: <strong>https://bimbo-coder.github.io</strong></p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Abimbola Arowojolu. All rights reserved.</p>
+        <p>&copy; 2025 Abimbola Arowojolu</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
